<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/language">

        <SwitchPreferenceCompat
            app:key="lang"
            app:title="@string/language_title"
            app:summaryOn="@string/lang_summary_on"
            app:summaryOff="@string/lang_summary_off" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/shared">

        <SwitchPreferenceCompat
            app:key="share"
            app:title="Enable share option" />
    </PreferenceCategory>

</PreferenceScreen>
