<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menuBar"
            android:icon="@drawable/ic_chrome_reader_mode_24px"
            android:title="@string/menu_menuBar" />
        <item
            android:id="@+id/nav_promotions"
            android:icon="@drawable/home_24px"
            android:title="@string/menu_promotions"/>

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_24px"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_24px"
            android:title="@string/menu_feedback" />
    </group>
</menu>
