<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_menuBar">

    <fragment
        android:id="@+id/nav_menuBar"
        android:name="com.example.dam_project.ui.menuBar.MenuBarFragment"
        android:label="@string/menu_menuBar"
        tools:layout="@layout/fragment_menu_bar">
    </fragment>

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.example.dam_project.ui.order.OrderFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_order">
    </fragment>

    <fragment
        android:id="@+id/nav_promotions"
        android:name="com.example.dam_project.ui.promotion.PromotionFragment"
        android:label="@string/menu_promotions"
        tools:layout="@layout/fragment_promotion" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.dam_project.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.dam_project.ui.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback" />

</navigation>